# madng-tpsa

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  release.sh  setup.py
.github/workflows/: wheels.yml
examples/: basic.py  basic_polynomial.py  complex_tpsa.py  map_compose.py  maps.py  parameters.py  parametric_normal_form.py
scripts/: build-madng-shared.sh
src/madng_tpsa/: __init__.py  _build.py  _cdefs.py  _cffi.py  _lib.py  ctpsa.py  ctpsa_map.py  descriptor.py  exceptions.py  functions.py  map.py  maps.py  tpsa.py
tests/: conftest.py  test_ctpsa.py  test_descriptor_api.py  test_examples.py  test_import.py  test_integration_tpsa.py  test_map_smoke.py  test_pymadng_discovery.py  test_tpsa_smoke.py
tools/: build_madng_tpsa_shared.py
