[build-system]
requires = ["setuptools>=68", "wheel", "cffi>=1.16"]
build-backend = "setuptools.build_meta"

[project]
name = "madng-tpsa"
version = "0.3.0"
description = "Self-contained Python CFFI wrapper for MAD-NG-compatible TPSA values and maps with LAPACK-backed inversion"
readme = "README.md"
requires-python = ">=3.9"
license = "GPL-3.0-or-later"
authors = [
  { name = "madng-tpsa contributors" }
]
keywords = ["MAD-NG", "TPSA", "GTPSA", "accelerator", "cffi"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
  "cffi>=1.16",
]

[project.optional-dependencies]
test = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/rdemaria/madng-tpsa"
Source = "https://github.com/rdemaria/madng-tpsa"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
madng_tpsa = ["py.typed", "vendor/*.h", "vendor/*.c"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
