[build-system]
requires = ["setuptools>=68", "wheel", "cffi>=1.16"]
build-backend = "setuptools.build_meta"

[project]
name = "madng-tpsa"
version = "0.4.0"
description = "Self-contained Python CFFI wrapper for MAD-NG-compatible real and complex TPSA values and maps"
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-or-later"
authors = [
  { name = "madng-tpsa contributors" }
]
keywords = ["MAD-NG", "TPSA", "GTPSA", "accelerator", "cffi"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
  "cffi>=1.16",
]

[project.optional-dependencies]
test = ["pytest>=7"]
release = ["build>=1.2", "cibuildwheel>=2.22", "twine>=5"]

[project.urls]
Homepage = "https://github.com/rdemaria/madng-tpsa"
Source = "https://github.com/rdemaria/madng-tpsa"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
madng_tpsa = ["py.typed", "vendor/*.h", "vendor/*.c"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.cibuildwheel]
build = "cp311-* cp312-* cp313-* cp314-*"
skip = "*-musllinux_*"
test-extras = ["test"]
test-command = "pytest {project}/tests"

[tool.cibuildwheel.linux]
archs = ["x86_64"]
manylinux-x86_64-image = "manylinux2014"
container-engine = "podman"
# manylinux2014 images are CentOS 7 based and provide LAPACK/BLAS via yum.
before-all = "yum install -y lapack-devel blas-devel"
